Fix root positioning and overflow

--- a/src/application.scss
+++ b/src/application.scss
@@ -11,15 +11,20 @@
 @import './stylesheets/instructions.scss';
 
 #root {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   width: 100%;
   height: 100%;
-  min-height: 1000px;
-  background-size: 500px 500px;
+  background-size: 50% 50%;
   background-repeat: repeat;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  overflow: hidden;
 }
 
 button:disabled { filter: grayscale(80%); }
